# devguard-ai

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  test_gemini.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 029aa10a45d1_initial_migration.py  3d0e2f2ed1f2_create_user_table.py  a96bab9eb6b4_updated_schema.py
docs/api-contracts/: orchestrator-input-schema.json
infrastructure/: Dockerfile.backend  Dockerfile.celery  Dockerfile.frontend  docker-compose.yml
infrastructure/github-actions/: README.md
src/agents/agentInfraCost/: .env.example  main.py
src/agents/agentInfraCost/core/: approval_manager.py  cost_estimator.py  decision_engine.py  finops_optimizer.py  input_validator.py  llm_enrichment.py  output_builder.py  pipeline.py  scenario_simulator.py  terraform_generator.py
src/agents/agentInfraCost/data/: aws_pricing.json
src/agents/codesec/: __init__.py  agent.py  config.py  models.py  requirements.txt
src/agents/deployops/: __init__.py  agent.py  recieved.example.json  test.py
src/backend/: auth.py  celery_app.py  config.py  crud.py  database.py  main.py  models.py  redis_client.py  schemas.py
src/backend/api/: auth.py
src/backend/tasks/: __init__.py  security_scans.py
src/lib/aws/: __init__.py  client.py
src/lib/terraform/: __init__.py  runner.py
src/shared/: __init__.py  exceptions.py
src/subgroup2/orchestrator/: graph.py  test_ws_client.py  websocket_manager.py  websocket_server.py
tmp/deployops/test_job_123/: Dockerfile
(+62 files in other folders)
