[project]
name = "devguard-ai"
version = "0.1.0"
description = "Agentic AI-powered DevSecOps platform"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = false
disallow_untyped_defs = false  # Sprint 1: loosened, tighten later (Sprint 5)

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
python_files = "test_*.py"
addopts = "-ra"
